--- a/openfisca_pf/tests/dicp/impot_foncier/unitaires/local/taux.yaml
+++ b/openfisca_pf/tests/dicp/impot_foncier/unitaires/local/taux.yaml
@@ -122,36 +122,36 @@
   output:
     taux_seconde_exemption_temporaire: 0.50
 
-- name: "acces_exemption_temporaire_exceptionnelle doit etre egale a True si date_permis_construire > 31/12/2022 et date_maximum_certificat_conformite < 31/12/2025 et demande_exemption_temporaire_exceptionnelle est True et annee_depuis_date_certificat_conformite <= duree_premiere_exemption_temporaire_exceptionnelle_pays"
+- name: "acces_exemption_temporaire_exceptionnelle doit etre egale a True si date_permis_construire > 31/12/2022 et date_maximum_certificat_conformite < 31/12/2025 et demande_exemption_temporaire_exceptionnelle est True et annee_depuis_date_certificat_conformite <= duree_exemption_temporaire_exceptionnelle_pays"
   period: 2024
   input:
     date_permis_construire: 2023-12-12
     date_certificat_conformite: 2024-12-12
-    duree_premiere_exemption_temporaire_exceptionnelle_pays: 10
+    duree_exemption_temporaire_exceptionnelle_pays: 10
   output:
     acces_exemption_temporaire_exceptionnelle: True
-- name: "acces_exemption_temporaire_exceptionnelle doit etre egale a False si date_permis_construire <= 31/12/2022 et date_maximum_certificat_conformite < 31/12/2025 et annee_depuis_date_certificat_conformite > duree_premiere_exemption_temporaire_exceptionnelle_pays"
+- name: "acces_exemption_temporaire_exceptionnelle doit etre egale a False si date_permis_construire <= 31/12/2022 et date_maximum_certificat_conformite < 31/12/2025 et annee_depuis_date_certificat_conformite > duree_exemption_temporaire_exceptionnelle_pays"
   period: 2024
   input:
     date_permis_construire: 2021-12-12
     date_certificat_conformite: 2024-01-01
-    duree_premiere_exemption_temporaire_exceptionnelle_pays: 10
+    duree_exemption_temporaire_exceptionnelle_pays: 10
   output:
     acces_exemption_temporaire_exceptionnelle: False
-- name: "acces_exemption_temporaire_exceptionnelle doit etre egale a True si date_permis_construire > 31/12/2022 et date_maximum_certificat_conformite >= 31/12/2025 et annee_depuis_date_certificat_conformite <= duree_premiere_exemption_temporaire_exceptionnelle_pays"
+- name: "acces_exemption_temporaire_exceptionnelle doit etre egale a True si date_permis_construire > 31/12/2022 et date_maximum_certificat_conformite >= 31/12/2025 et annee_depuis_date_certificat_conformite <= duree_exemption_temporaire_exceptionnelle_pays"
   period: 2024
   input:
     date_permis_construire: 2024-12-12
     date_certificat_conformite: 2026-12-12
-    duree_premiere_exemption_temporaire_exceptionnelle_pays: 10
+    duree_exemption_temporaire_exceptionnelle_pays: 10
   output:
     acces_exemption_temporaire_exceptionnelle: False
-- name: "acces_exemption_temporaire_exceptionnelle doit etre egale a True si date_permis_construire > 31/12/2022 et date_maximum_certificat_conformite < 31/12/2025 et annee_depuis_date_certificat_conformite <= duree_premiere_exemption_temporaire_exceptionnelle_pays"
+- name: "acces_exemption_temporaire_exceptionnelle doit etre egale a True si date_permis_construire > 31/12/2022 et date_maximum_certificat_conformite < 31/12/2025 et annee_depuis_date_certificat_conformite <= duree_exemption_temporaire_exceptionnelle_pays"
   period: 2024
   input:
     date_permis_construire: 2021-12-12
     date_certificat_conformite: 2025-12-12
-    duree_premiere_exemption_temporaire_exceptionnelle_pays: 10
+    duree_exemption_temporaire_exceptionnelle_pays: 10
   output:
     acces_exemption_temporaire_exceptionnelle: False
 
@@ -207,40 +207,26 @@
 - name: "duree_exemption_temporaire est egale a 5 si date_certificat_conformite < duree_premiere_exemption_temporaire_pays"
   period: 2024
   input:
-    acces_exemption_temporaire_exceptionnelle: False
-    demande_exemption_temporaire_exceptionnelle: False
-    date_certificat_conformite: 2023-12-12
-    duree_premiere_exemption_temporaire_pays: 5
-    duree_seconde_exemption_temporaire_pays: 3
+    date_certificat_conformite: 2019-12-31
   output:
     duree_exemption_temporaire: 5
 - name: "duree_exemption_temporaire est egale a 10 si acces_exemption_temporaire_exceptionnelle"
-  period: 2024
+  period: 2035
   input:
-    acces_exemption_temporaire_exceptionnelle: True
     demande_exemption_temporaire_exceptionnelle: True
-    date_certificat_conformite: 2019-12-12
-    duree_premiere_exemption_temporaire_pays: 5
-    duree_seconde_exemption_temporaire_pays: 3
+    date_certificat_conformite: 2025-12-30
+    date_permis_construire: 2023-01-01
   output:
     duree_exemption_temporaire: 10
 - name: "duree_exemption_temporaire est egale a 3 si duree_premiere_exemption_temporaire_pays < annee_depuis_date_certificat_conformite <= (duree_premiere_exemption_temporaire_pays + duree_seconde_exemption_temporaire_pays)"
   period: 2024
   input:
-    acces_exemption_temporaire_exceptionnelle: False
-    demande_exemption_temporaire_exceptionnelle: False
-    date_certificat_conformite: 2018-12-12
-    duree_premiere_exemption_temporaire_pays: 5
-    duree_seconde_exemption_temporaire_pays: 3
+    date_certificat_conformite: 2018-12-31
   output:
     duree_exemption_temporaire: 3
 - name: "duree_exemption_temporaire est egale a 0 si duree_premiere_exemption_temporaire_pays > annee_depuis_date_certificat_conformite <= (duree_premiere_exemption_temporaire_pays + duree_seconde_exemption_temporaire_pays)"
   period: 2024
   input:
-    acces_exemption_temporaire_exceptionnelle: False
-    demande_exemption_temporaire_exceptionnelle: False
-    date_certificat_conformite: 2010-12-12
-    duree_premiere_exemption_temporaire_pays: 5
-    duree_seconde_exemption_temporaire_pays: 3
+    date_certificat_conformite: 2015-12-31
   output:
     duree_exemption_temporaire: 0
