--- a/openfisca_pf/tests/dicp/impot_foncier/scenarios/location_non_meuble.yaml
+++ b/openfisca_pf/tests/dicp/impot_foncier/scenarios/location_non_meuble.yaml
@@ -2,6 +2,7 @@
   period: 2023
   input:
     loue: true
+    habitation_principale: false
     type_location: NON_MEUBLE
     commune_fiscale: PAPEETE
     loyer_janvier: 380000
