--- a/openfisca_pf/tests/dicp/impot_foncier/scenarios/habitation_principale.yaml
+++ b/openfisca_pf/tests/dicp/impot_foncier/scenarios/habitation_principale.yaml
@@ -2,6 +2,7 @@
   period: 2023
   input:
     loue: false
+    habitation_principale: true
     commune_fiscale: PAPEETE
     valeur_venale: 15000000
   output:
