--- a/openfisca_pf/tests/dicp/impot_foncier/unitaires/local/taux.yaml
+++ b/openfisca_pf/tests/dicp/impot_foncier/unitaires/local/taux.yaml
@@ -125,14 +125,25 @@
 - name: "acces_exemption_temporaire_exceptionnelle doit etre egale a True si date_permis_construire > 31/12/2022 et date_maximum_certificat_conformite < 31/12/2025 et demande_exemption_temporaire_exceptionnelle est True et annee_depuis_date_certificat_conformite <= duree_exemption_temporaire_exceptionnelle_pays"
   period: 2024
   input:
+    habitation_principale: True
     date_permis_construire: 2023-12-12
     date_certificat_conformite: 2024-12-12
     duree_exemption_temporaire_exceptionnelle_pays: 10
   output:
     acces_exemption_temporaire_exceptionnelle: True
+- name: "acces_exemption_temporaire_exceptionnelle doit etre egale a True si date_permis_construire > 31/12/2022 et date_maximum_certificat_conformite < 31/12/2025 et demande_exemption_temporaire_exceptionnelle est True et annee_depuis_date_certificat_conformite <= duree_exemption_temporaire_exceptionnelle_pays"
+  period: 2024
+  input:
+    habitation_principale: False
+    date_permis_construire: 2023-12-12
+    date_certificat_conformite: 2024-12-12
+    duree_exemption_temporaire_exceptionnelle_pays: 10
+  output:
+    acces_exemption_temporaire_exceptionnelle: False
 - name: "acces_exemption_temporaire_exceptionnelle doit etre egale a False si date_permis_construire <= 31/12/2022 et date_maximum_certificat_conformite < 31/12/2025 et annee_depuis_date_certificat_conformite > duree_exemption_temporaire_exceptionnelle_pays"
   period: 2024
   input:
+    habitation_principale: True
     date_permis_construire: 2021-12-12
     date_certificat_conformite: 2024-01-01
     duree_exemption_temporaire_exceptionnelle_pays: 10
@@ -141,6 +152,7 @@
 - name: "acces_exemption_temporaire_exceptionnelle doit etre egale a True si date_permis_construire > 31/12/2022 et date_maximum_certificat_conformite >= 31/12/2025 et annee_depuis_date_certificat_conformite <= duree_exemption_temporaire_exceptionnelle_pays"
   period: 2024
   input:
+    habitation_principale: True
     date_permis_construire: 2024-12-12
     date_certificat_conformite: 2026-12-12
     duree_exemption_temporaire_exceptionnelle_pays: 10
@@ -149,6 +161,7 @@
 - name: "acces_exemption_temporaire_exceptionnelle doit etre egale a True si date_permis_construire > 31/12/2022 et date_maximum_certificat_conformite < 31/12/2025 et annee_depuis_date_certificat_conformite <= duree_exemption_temporaire_exceptionnelle_pays"
   period: 2024
   input:
+    habitation_principale: True
     date_permis_construire: 2021-12-12
     date_certificat_conformite: 2025-12-12
     duree_exemption_temporaire_exceptionnelle_pays: 10
@@ -213,6 +226,7 @@
 - name: "duree_exemption_temporaire est egale a 10 si acces_exemption_temporaire_exceptionnelle"
   period: 2035
   input:
+    habitation_principale: True
     demande_exemption_temporaire_exceptionnelle: True
     date_certificat_conformite: 2025-12-30
     date_permis_construire: 2023-01-01
