--- a/openfisca_pf/tests/dicp/impot_foncier/scenarios/premiere_exemption_temporaire.yaml
+++ b/openfisca_pf/tests/dicp/impot_foncier/scenarios/premiere_exemption_temporaire.yaml
@@ -8,6 +8,7 @@
     date_certificat_conformite: 2026-12-12
     date_permis_construire: 2023-12-12
   output:
+    duree_exemption_temporaire_restante: 3
     acces_exemption_temporaire_exceptionnelle: False
     valeur_locative: 600000
     base_imposable_apres_exemption_temporaire: 0
