--- a/openfisca_pf/tests/dicp/impot_foncier/unitaires/pays/taux.yaml
+++ b/openfisca_pf/tests/dicp/impot_foncier/unitaires/pays/taux.yaml
@@ -67,3 +67,38 @@
   period: 2024
   output:
     taux_second_abattement_si_loue_non_meuble_pays: 0.25
+
+- name: "duree_premiere_exemption_temporaire_pays est egale à 5"
+  period: 2024
+  output:
+    duree_premiere_exemption_temporaire_pays: 5
+
+- name: "taux_premiere_exemption_temporaire_pays est egale à 1.00"
+  period: 2024
+  output:
+    taux_premiere_exemption_temporaire_pays: 1.00
+
+- name: "duree_seconde_exemption_temporaire_pays est egale à 3"
+  period: 2024
+  output:
+    duree_seconde_exemption_temporaire_pays: 3
+
+- name: "taux_seconde_exemption_temporaire_pays est egale à 0.50"
+  period: 2024
+  output:
+    taux_seconde_exemption_temporaire_pays: 0.50
+
+- name: "duree_exemption_temporaire_exceptionnelle_pays est egale à 10"
+  period: 2024
+  output:
+    duree_exemption_temporaire_exceptionnelle_pays: 10
+
+- name: "date_minimum_permis_construire_pour_exemption_temporaire_exceptionnelle_pays est egale à 2023-01-01"
+  period: 2024
+  output:
+    date_minimum_permis_construire_pour_exemption_temporaire_exceptionnelle_pays: 2023-01-01
+
+- name: "date_maximum_certificat_conformite_pour_exemption_temporaire_exceptionnelle_pays est egale à 2025-12-31"
+  period: 2024
+  output:
+    date_maximum_certificat_conformite_pour_exemption_temporaire_exceptionnelle_pays: 2025-12-31
