--- a/openfisca_pf/tests/dicp/impot_foncier/unitaires/pays/taux.yaml
+++ b/openfisca_pf/tests/dicp/impot_foncier/unitaires/pays/taux.yaml
@@ -102,3 +102,8 @@
   period: 2024
   output:
     date_maximum_certificat_conformite_pour_exemption_temporaire_exceptionnelle_pays: 2025-12-31
+
+- name: "valeur_venale_maximum_pour_exoneration_permanente_pays est egale à 500000"
+  period: 2024
+  output:
+    valeur_venale_maximum_pour_exoneration_permanente_pays: 500000
