--- a/openfisca_pf/parameters/daf/rch/plus_values_immobiliere.yaml
+++ b/openfisca_pf/parameters/daf/rch/plus_values_immobiliere.yaml
@@ -1,19 +1,48 @@
-description: Calcul de la plus value immobilière
+description: Taux de la plus value immobilière
 metadata:
+  type: single_amount
+  unit: year
   reference: https://law.gov.example/basic-income/amount
-init:
-  description: Valeur minimal d'application du droit de publicité immobiliere
-  values:
-    2018-01-01: 0
-rate_0:
-  description: Taux du droit de publicité immobilière sur la tranche initiale
-  values:
-    2018-01-01: 0.02
-threshold_1:
-  description: Assiette de taxation
-  values:
-    2018-01-01: 25000000
-rate_1:
-  description: Taux du droit pour les valeurs au dessus de l'assiette
-  values:
-    2018-01-01: 0.02
+brackets:
+  - amount:
+      2018-01-01:
+        value: 0.5
+    threshold:
+      2018-01-01:
+        value: 0
+  - amount:
+      2018-01-01:
+        value: 0.2
+    threshold:
+      2018-01-01:
+        value: 5
+  - amount:
+      2018-01-01:
+        value: 0.16
+    threshold:
+      2018-01-01:
+        value: 6
+  - amount:
+      2018-01-01:
+        value: 0.12
+    threshold:
+      2018-01-01:
+        value: 7
+  - amount:
+      2018-01-01:
+        value: 0.08
+    threshold:
+      2018-01-01:
+        value: 8
+  - amount:
+      2018-01-01:
+        value: 0.04
+    threshold:
+      2018-01-01:
+        value: 9
+  - amount:
+      2018-01-01:
+        value: 0
+    threshold:
+      2018-01-01:
+        value: 10
